# wsl-sys-cli

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
dotfiles/: sys-cli.yaml
sys_cli/: cli.py
